--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         function recordClickAndRedirect() {
             // Adjust tracking link
-            const adjustLink = "https://app.adjust.com/1hdxvg9t?redirect=https%3A%2F%2Fimages.1097638.com%2Fwsd-images-prod%2Fcasabrlf2%2Fapp_pack%2Fandroid%2Fcasabrlf2_2.4.53_20241025193618.apk";
+            const adjustLink = "https://app.adjust.com/1idh63zr?redirect=https%3A%2F%2Fimages.1097638.com%2Fwsd-images-prod%2Fcasabrlf2%2Fapp_pack%2Fandroid%2Fcasabrlf2_2.4.54_20241101181215.apk";
 
             // Record click and redirect
             fetch(adjustLink).then(() => {
